Javac plugin rework (#36)
* Javac plugin rework

* Add staging repository to test plugin project

* Remove temporary use of staging repository